revise gitignore files

--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,13 @@ temp/
 *.njsproj
 *.sln
 *.sw?
+
+frontend/node_modules/
+frontend/build/
+frontend/.env.local
+frontend/.env.development.local
+frontend/.env.test.local
+frontend/.env.production.local
+frontend/npm-debug.log*
+frontend/yarn-debug.log*
+frontend/yarn-error.log*
